commit fix text overflow

--- a/src/app/features/shared/navbar/profile/profile.component.scss
+++ b/src/app/features/shared/navbar/profile/profile.component.scss
@@ -76,6 +76,9 @@
     line-height: 1.2;
     margin: 0;
     padding: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .icon-button {
